[package]
name = "offstage"
version = "0.1.0"
authors = ["Theodore Ni <3806110+tjni@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
git2 = { version = "0.13.17", features = ["zlib-ng-compat"] }
itertools = "0.10.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
structopt = "0.3.21"

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.2"
tempfile = "3.2.0"

[profile.release]
lto = true
codegen-units = 1
